// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row component Should Render BoxColumn 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  padding: 2rem;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px #e3e9f3;
}

<div
  className="c0 c1"
>
  content
</div>
`;

exports[`Row component Should Render Column 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  content
</div>
`;

exports[`Row component Should Render EvenColumn 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

<div
  className="c0 c1"
>
  content
</div>
`;

exports[`Row component Should Render FlexWrapRow 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  padding-top: 2rem;
  margin-left: -2rem;
  margin-top: -2rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: transparent;
}

.c1 > * {
  margin-left: 2rem;
  margin-top: 2rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 300px;
}

@media (max-width:768px) {
  .c1 {
    margin-left: 0;
  }

  .c1 > * {
    margin-left: 0;
    min-width: 100%;
    max-width: 100%;
  }
}

<div
  className="c0 c1"
>
  <div>
    child
  </div>
</div>
`;

exports[`Row component Should Render Row 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
  className="c0"
>
  content
</div>
`;
